# FashionSeg

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Notebooks/: create_dataset.ipynb  evaluate.ipynb  explore_data.ipynb  explore_data_v2.ipynb  finetune_sam2.ipynb  finetune_sam2_setup.ipynb  finetuned_exp_segformer.ipynb
checkpoints/: download_ckpts.sh
src/: preprocess_data.py  utils.py
