[project]
name = "fashionseg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
